# GatherYourDeals-SDK

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml  docs.yml  lint.yml  security.yml  test.yml
docs/: api.rst  conf.py  error_handling.rst  index.rst  installation.rst  lazy_login.rst  quickstart.rst  token_storage.rst
gather_your_deals/: __init__.py  client.py  config.py  exceptions.py  http.py  models.py
gather_your_deals/cli/: __init__.py  main.py
gather_your_deals/endpoints/: __init__.py  admin.py  meta.py  receipts.py  sessions.py  users.py
tests/: test_client.py  test_config.py  test_models.py
